# bibtex2rfcv2

./: .gitignore  LICENSE  PRD.md  PROJECT_PLAN.md  README.md  minimal_parse.py  pyproject.toml  pytest.ini
.github/workflows/: ci.yml
docs/: api.md  development.md  index.md  installation.md  troubleshooting.md  usage.md
docs/examples/: article.bibtex  book.bibtex  conference.bibtex
scripts/: generate_xml.py  split_bibtex_entries.py
src/bibtex2rfcv2/: __init__.py  cli.py  converter.py  error_handling.py  kdrfc_converter.py  models.py  parser.py  utils.py  xml_converter.py  xml_models.py
tests/: conftest.py  test_cli.py  test_converter.py  test_kdrfc.py  test_models.py  test_parser.py  test_xml_models.py
tests/data/: dblp_sample.bibtex  fips197.bibtex  icml2023.bibtex  invalid_encoding.bibtex  sigcomm2023.bibtex
tests/data/icml2023_entries/: entry127.bibtex  entry128.bibtex  entry173.bibtex  entry203.bibtex  entry235.bibtex  entry250.bibtex  entry258.bibtex  entry260.bibtex  entry261.bibtex  entry271.bibtex  entry295.bibtex  entry3.bibtex  entry305.bibtex  entry328.bibtex  entry366.bibtex  entry389.bibtex  entry390.bibtex  entry393.bibtex  entry398.bibtex  entry415.bibtex  entry502.bibtex  entry516.bibtex  entry533.bibtex  entry554.bibtex  entry560.bibtex  entry59.bibtex  entry616.bibtex  entry636.bibtex  entry647.bibtex  entry679.bibtex  entry682.bibtex  entry683.bibtex  entry690.bibtex  entry7.bibtex  entry713.bibtex  entry721.bibtex  entry738.bibtex  entry763.bibtex  entry769.bibtex  entry791.bibtex  (+10 more)
tests/fixtures/: postamble.md  preamble.md
