[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bibtex2rfcv2"
version = "0.1.0"
description = "Modern BibTeX to RFC XML converter"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
authors = [
    { name = "Yaron Sheffer", email = "yaronf.ietf@gmail.com" }
]
dependencies = [
    "bibtexparser>=1.4.0",
    "lxml>=4.9.0",
    "click>=8.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
    "isort>=5.0.0",
    "flake8>=6.0.0",
]

[project.scripts]
bibtex2rfc = "bibtex2rfcv2.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=bibtex2rfcv2"

[tool.black]
line-length = 88
target-version = ["py38"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.isort]
profile = "black"
multi_line_output = 3 