[build-system]
requires = ["hatchling", "wheel", "setuptools"]
build-backend = "hatchling.build"

[project]
name = "bibtex2rfcv2"
version = "0.1.0"
description = "Convert BibTeX citations to RFC-compliant XML references"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Yaron Sheffer", email = "yaronf.ietf@gmail.com"},
]
dependencies = [
    "bibtexparser>=1.4.3",
    "lxml>=4.9.0",
    "click>=8.0.0",
    "tqdm>=4.65.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
    "isort>=5.0.0",
    "flake8>=6.0.0",
    "build>=1.0.0",
    "wheel>=0.40.0",
    "setuptools>=65.0.0",
]

[project.scripts]
bibtex2rfcv2 = "bibtex2rfcv2.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=src"

[tool.coverage.run]
source = ["src"]
omit = ["tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "pass",
    "@abstractmethod",
]

[tool.black]
line-length = 88
target-version = ["py38"]
include = '\.pyi?$'

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.isort]
profile = "black"
multi_line_output = 3 